src/test/compile-fail/do2.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

fn f(f: &fn(int) -> bool) -> bool { f(10i) }

fn main() {
    assert!(do f() |i| { i == 10i } == 10i);
    //~^ ERROR: expected `bool` but found `int`
}
